Further work on support cross-compiler compiling - compiled units may now reference other compilers - still need better logic to avoid calling every compiler for every template